syntax = "proto3";
package tutorial;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/walrusyu/gocamp007/week4/api/user";

message Person {
  int32 id = 2;
  string name = 1;
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;

  google.protobuf.Timestamp last_updated = 5;
}

message AddressBook {
  repeated Person people = 1;
}

service User {
  rpc SaveAddressBook (SaveAddressBookRequest) returns (SaveAddressBookReply) {}
}

message SaveAddressBookRequest {
  repeated Person people = 1;
}

message SaveAddressBookReply {
  string message = 1;
}